# libc11

./: GNUmakefile  common.mk  meson.build
include/: c11threads.h
include/c11/: threads.h
src/: pthread.c  win32.c
